@@ -17,6 +17,7 @@ Version 1.4
 * Fixed collision for solid static meshes with zero collision box.
 * Fixed T-Rex's head rotation.
 * Auto-switch to a crawl state if player start position is in a crawlspace.
+* Allow directional flame emitter (negative OCBs) to be rotated at any angle.
 * Revise wall spikes:
   - Wall spikes now stop when they touch a pushable, another spike wall or a normal wall.
   - Wall spikes will shatter any shatter in its path.
